--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint": "^4.8.0",
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-watch": "^3.1.2"
+    "eslint-watch": "^3.1.2",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
