--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint-dev": "node_modules/.bin/esw app/ -w --clear --cache",
     "init-db": "rm app/sqlite.db; node app/scripts/initDb",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha app/test/**/*",
+    "test-integration": "NODE_ENV=test JWT_ALG=HS256 JWT_SECRET=shhhhhh mocha app/test-integration/**/*"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "jsonwebtoken": "^8.0.1",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "sqlite3": "^3.1.13",
