--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint-dev": "node_modules/.bin/esw app/ -w --clear --cache",
     "init-db": "rm app/sqlite.db; node app/scripts/initDb",
-    "test": "npm run init-db; NODE_ENV=test mocha app/test/**/*",
-    "test-integration": "npm run init-db; NODE_ENV=test JWT_ALG=HS256 JWT_SECRET=shhhhhh mocha app/test-integration/**/*",
+    "test": "npm run init-db; NODE_ENV=test node_modules/.bin/mocha app/test/**/*",
+    "test-integration": "npm run init-db; NODE_ENV=test JWT_ALG=HS256 JWT_SECRET=shhhhhh node_modules/.bin/mocha app/test-integration/**/*",
     "get-jwt": "NODE_ENV=development JWT_ALG=HS256 JWT_SECRET=shhhhhh node app/scripts/getJwt.js",
     "app": "NODE_ENV=development JWT_ALG=HS256 JWT_SECRET=shhhhhh node index.js"
   },
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-watch": "^3.1.2",
+    "mocha": "^4.0.0",
     "supertest": "^3.0.0"
   },
   "dependencies": {
