--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npm run init-db; NODE_ENV=test node_modules/.bin/mocha app/test/**/*",
     "test-integration": "npm run init-db; NODE_ENV=test JWT_ALG=HS256 JWT_SECRET=shhhhhh node_modules/.bin/mocha app/test-integration/**/*",
     "get-jwt": "NODE_ENV=development JWT_ALG=HS256 JWT_SECRET=shhhhhh node app/scripts/getJwt.js",
-    "app": "NODE_ENV=development JWT_ALG=HS256 JWT_SECRET=shhhhhh node index.js"
+    "app-dev": "NODE_ENV=development JWT_ALG=HS256 JWT_SECRET=shhhhhh node index.js",
+    "app-prod": "NODE_ENV=production node index.js"
   },
   "repository": {
     "type": "git",
